--- a/Java-EE-Assignments/Json-with-Ajax/web/pages/customer.html
+++ b/Java-EE-Assignments/Json-with-Ajax/web/pages/customer.html
@@ -25,7 +25,7 @@
                                                                              href="/jsonp/pages/customer">Customer</a>
         </li>
         <li class="list-group-item bg-white" id="lnkItem"><a href="/jsonp/pages/item">Item</a></li>
-        <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.jsp">Orders</a></li>
+        <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.html">Orders</a></li>
     </ul>
 </header>
 
