--- a/Java-EE-Assignments/Json-with-Ajax/web/pages/purchase-order.html
+++ b/Java-EE-Assignments/Json-with-Ajax/web/pages/purchase-order.html
@@ -1,4 +1,3 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@
         <li class="list-group-item bg-white" id="lnkHome"><a href="../index.jsp">Home</a></li>
         <li class="list-group-item bg-white" id="lnkCustomer"><a href="customer.html">Customer</a></li>
         <li class="list-group-item bg-white" id="lnkItem"><a  href="item.html">Item</a></li>
-        <li class="list-group-item bg-danger text-white" id="lnkOrders"><a class="text-white" href="purchase-order.jsp">Orders</a></li>
+        <li class="list-group-item bg-danger text-white" id="lnkOrders"><a class="text-white" href="purchase-order.html">Orders</a></li>
     </ul>
 </header>
 
