Created doDelete method in item and customer servlets

--- a/Java-EE-Assignments/Json-with-Ajax/web/pages/customer.html
+++ b/Java-EE-Assignments/Json-with-Ajax/web/pages/customer.html
@@ -21,10 +21,8 @@
     <h1 class="position-absolute" id="nav"></h1>
     <ul class="list-group list-group-horizontal text-danger justify-content-end font-weight-bold">
         <li class="list-group-item bg-white" id="lnkHome"><a href="../index.jsp">Home</a></li>
-        <li class="list-group-item bg-danger text-white" id="lnkCustomer"><a class="text-white"
-                                                                             href="/jsonp/pages/customer">Customer</a>
-        </li>
-        <li class="list-group-item bg-white" id="lnkItem"><a href="/jsonp/pages/item">Item</a></li>
+        <li class="list-group-item bg-white" id="lnkCustomer"><a href="customer.html">Customer</a></li>
+        <li class="list-group-item bg-white" id="lnkItem"><a href="item.html">Item</a></li>
         <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.html">Orders</a></li>
     </ul>
 </header>
@@ -114,7 +112,6 @@
             }
         });
     }
-
     $("#btnGetAll").click(function () {
         getAll();
     });
@@ -163,22 +160,20 @@
         })
     });
     $("#btnCusDelete").click(function () {
-        let formData = $("#cusForm").serialize();
+        let customerId = $("#txtCustomerID").val();
         $.ajax({
-            url: "customer?option=delete",
-            method: "post",
-            data: formData,
+            url: "customer?id="+customerId,
+            method: "DELETE",
             success: function (res) {
                 getAll();
                 alert(
-                    res.message,
+                    res.message
                 );
             },
             error: function (res) {
                 alert(res.responseJSON.message);
             }
         })
-
     });
 
 </script>
